--- a/composer.json
+++ b/composer.json
@@ -10,15 +10,15 @@
         }
     ],
     "require": {
-        "php": "^8.0",
-        "roach-php/core": "^0.3.0",
-        "spatie/laravel-package-tools": "^1.11"
+        "php": "^7.3|^7.4|^8.0",
+        "isaacongoma/core": "^dev-main",
+        "isaacongoma/laravel-package-tools": "^dev-master"
     },
     "require-dev": {
         "ergebnis/composer-normalize": "^2.15",
         "ergebnis/php-cs-fixer-config": "^3.0",
         "orchestra/testbench": "^6.20 || ^7.0",
-        "phpunit/phpunit": "^9.5",
+        "phpunit/phpunit" : "4.*",
         "roave/security-advisories": "dev-latest",
         "spatie/phpunit-snapshot-assertions": "^4.2"
     },
